[gd_scene load_steps=12 format=3 uid="uid://dqqdfl684aak4"]

[ext_resource type="Script" path="res://Level/status_sprite.gd" id="1_2tbqf"]
[ext_resource type="Texture2D" uid="uid://bhmp3u1og6j0k" path="res://Assets/effects/eff1-0.png" id="2_ohfoq"]
[ext_resource type="FontFile" uid="uid://0kpmyoip0ktj" path="res://Assets/ka1.ttf" id="3_fmxcn"]

[sub_resource type="Animation" id="Animation_2weyw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 4)]
}

[sub_resource type="Animation" id="Animation_d4kem"]
resource_name = "appear"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(3, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.666667, 0.8, 1.16667),
"transitions": PackedFloat32Array(-2, -2, -2, 0.5),
"update": 0,
"values": [0.0, 12.5664, 12.5664, 6.28319]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"show"
}]
}

[sub_resource type="Animation" id="Animation_6d6ms"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 18.8496]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, 3), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_mnnni"]
resource_name = "hover"
length = 16.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(4, 12),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, 5), Vector2(0, -5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(6.13333, 15.5667),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [0.0349066, -0.0349066]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y8u0f"]
_data = {
"RESET": SubResource("Animation_2weyw"),
"appear": SubResource("Animation_d4kem"),
"die": SubResource("Animation_6d6ms"),
"hover": SubResource("Animation_mnnni")
}

[sub_resource type="Animation" id="Animation_8mvvs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("deathLabel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_hpev1"]
resource_name = "wobble"
length = 1.33334
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("deathLabel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.666667, 1),
"transitions": PackedFloat32Array(-2, -2, -2, -2),
"update": 0,
"values": [0.0610865, -0.0610865, 0.0610865, -0.0610865]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("deathLabel")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"show"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_exyok"]
_data = {
"RESET": SubResource("Animation_8mvvs"),
"wobble": SubResource("Animation_hpev1")
}

[node name="statusSprite" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_2tbqf")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("2_ohfoq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_y8u0f")
}

[node name="deathLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 65.0
offset_top = -21.0
offset_right = 171.0
offset_bottom = 2.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("3_fmxcn")
theme_override_font_sizes/font_size = 10
text = "dfasdsadsa"
autowrap_mode = 2

[node name="deathLabelAnims" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_exyok")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
